--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -1,4 +1,6 @@
 .header {
   text-align: center;
-  padding-top: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #483d8b;
 }
