--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,7 +1,7 @@
 .Button {
   padding: 8px 16px;
   border-radius: 2px;
-  background-color: #483d8b;
+  background-color: rgba(0, 0, 0, 0.8);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: block;
